--- a/style.css
+++ b/style.css
@@ -728,7 +728,7 @@ textarea {
 		linear-gradient(
 			to right, 
 			rgba(255, 255, 255,0.0), 
-			rgba(255, 255, 255, 1));
+			rgba(0, 0, 0, 0.5));
 	box-shadow:
 		6px 2px 6px rgba(0, 0, 0, 0.1), 
 		6px -2px 6px rgba(0, 0, 0, 0.1);
@@ -743,7 +743,7 @@ textarea {
 	font-size: 1.3em;
 	margin-top: 0px;
 	margin-bottom: 0px;
-	color: #0F2B4C;
+	color: #FFF;
 }
 
 .site-title a {
@@ -751,7 +751,7 @@ textarea {
 }
 
 .site-title a:visited {
-	color: #0F2B4C;
+	color: #FFF;
 }
 
 
@@ -759,12 +759,11 @@ textarea {
 .site-title-main-left:visited {
 	text-decoration: none;
 	text-transform: uppercase;
-	color: #0F2B4C;
 }
 
 .logo-box {
 	position: relative;
-	background: rgba(255, 255, 255, 0.7);
+	background: rgba(0, 0, 0, 0.5);
 	border-radius:50%;
 	padding: 5px;
 	max-height: 200px;
@@ -799,7 +798,7 @@ textarea {
 		linear-gradient(
 			to left, 
 			rgba(255, 255, 255, 0), 
-			rgba(255, 255, 255, 1));
+			rgba(0, 0, 0, 0.6));
 	box-shadow:
 		-6px -2px 6px rgba(0, 0, 0, 0.1), 
 		-6px 2px 6px rgba(0, 0, 0, 0.1);
@@ -809,7 +808,6 @@ textarea {
 .site-title-main-right {
 	text-decoration: none;
 	text-transform: uppercase;
-	color: #0F2B4C;
 	font-family: Montserrat, sans-serif;
 	font-weight: 700;
 	font-size: 1.2em;
@@ -818,13 +816,12 @@ textarea {
 .site-title-main-right:visited {
 	text-decoration: none;
 	text-transform: uppercase;
-	color: #0F2B4C;
 }
 
 /* .menu-item {
 	border: 1px solid red;
-} */
-/* .menu-item {
+}
+.menu-item {
 	padding: 5px 10px 5px 10px;
 	margin: 5px 10px 5px 5px;
 	font-family: Roboto:wght@100, sans-serif;
@@ -832,10 +829,10 @@ textarea {
 	border-radius: 5px;
 	border: solid 1px rgba(255, 255, 255, 0.5);
 	box-shadow: 2px 0px 2px rgba(0, 0, 0, 0.2), -2px 0px 2px rgba(0, 0, 0, 0.2);
-} */
+}
 
 
-/* .menu-item:hover {
+.menu-item:hover {
 	background: rgba(255, 255, 255, 0.7);
 	padding: 5px 15px 5px 15px;
 	margin: 3px 0px 3px 5px;
@@ -843,7 +840,7 @@ textarea {
 	z-index: 99999;
 } */
 
-.nav-menu {
+.menu-meniu-principal-ro-container {
 	display: flex;
 	justify-content: space-around;
 }
@@ -974,142 +971,100 @@ textarea {
 
 /* Navigation
 --------------------------------------------- */
-/*old animation for menu appear*/
-/* @keyframes menu_appear {
-	from {
-		background: #000000;
-		opacity:0.0;
-		height: 0%;
 
+/* Main menu navigation
+_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+*/
+
+	.main-navigation {
+		/* border-radius: 5px; */
+		display: block;
+		width: 100%;
+		max-width: 1440px;
+		padding: 0px 5px 0px 5px;
+		box-shadow: 
+			2px 2px 10px rgba(0, 0, 0, 0.1), 
+			-2px -2px 10px rgba(0, 0, 0, 0.1);
 	}
-	to {
-		background:#EAF0F9;
-		opacity: 1;
-		height:100%;
+
+	.main-navigation ul, {
+		display: none;
+		list-style: none;
+		margin: 0;
+		padding-left: 0;
+		max-width: 1440px;
+		margin: auto;
 	}
-} */
 
-.body-container {
-	/* border: 1px solid red; */
-	width: 100%;
-	/* max-width: 1440px; */
-	margin-left: auto;
-	margin-right: auto;
-	/* padding: 0% 3% 0% 3%; */
-}
+	.main-navigation ul ul {
+		/* border: 1px solid red; */
+		display: none;
+		padding: 3px 5px 3px 5px;
+		background: rgb(31, 73, 118);
+		float: none;
+		position: absolute;
+		top: 100%;
+		left: 0;
+		z-index: 6000;
+		width: 200px;
+	}
 
-.main-navigation {
-	/* border: 1px solid rgba(255, 255, 255, 0.1); */
-	/* border-radius: 5px; */
-	display: block;
-	width: 100%;
-	max-width: 1440px;
-	padding: 0px 5px 0px 5px;
-	background: rgb(31, 73, 118);
-	box-shadow: 
-		2px 2px 10px rgba(0, 0, 0, 0.1), 
-		-2px -2px 10px rgba(0, 0, 0, 0.1);
-}
+	.main-navigation ul ul ul {
+		display: none;
+		float: right;
+		position: absolute;
+		top: 0%;
+		right: -200px;
+		z-index: 5000;
+	}
 
-.main-navigation ul {
-	display: none;
-	list-style: none;
-	margin: 0;
-	padding-left: 0;
-	max-width: 1440px;
-	margin: auto;
+	.main-navigation ul ul li:hover > ul,
+	.main-navigation ul ul li.focus > ul {
+		display: block;
+		left: auto;
+		margin: 3px 0px 3px 15px;
+	}
 
-/*animation for the menu when loading page*/
-/* 	animation-name: menu_appear;
-	animation-duration: 0.1s; */
-}
-
-.main-navigation li {
-	position: relative;
-	padding: 8px 0px 8px 0px;
-	display: flex;
-}
+	.main-navigation ul ul a, 
+	.main-navigation ul ul ul a {
+		font-size: 0.8em;
+		line-height: 1.2em;
+	}
 
 
+	.main-navigation ul li:hover > ul,
+	.main-navigation ul li.focus > ul {
+		display: block;
+		left: auto;
+	}
 
-.main-navigation ul a {
-	text-transform: uppercase;
-	text-decoration: none;
-	font-family: Montserrat, sans-serif;
-	font-weight: 100;
-	font-size: 1.1em;
-	font-kerning: auto;
-	letter-spacing: 1px; 
-	color: #fff;
-	width: 100%;
-	height: 100%;
-	padding: 0px 10px 0px 10px;
-}
+	.main-navigation li {
+		position: relative;
+		padding: 8px 0px 8px 0px;
+		display: flex;
+		margin: 0px 15px 0px 15px;
+	}
 
-.main-navigation ul a:hover {
-	border-left: solid 1px rgba(255, 255, 255, 0.5);
-	border-right: solid 1px rgba(255, 255, 255, 0.5);
-}
+	.main-navigation ul a {
+		text-transform: uppercase;
+		text-decoration: none;
+		font-family: Montserrat, sans-serif;
+		font-weight: 100;
+		font-size: 1.1em;
+		font-kerning: auto;
+		letter-spacing: 1px; 
+		color: #fff;
+		width: 100%;
+		height: 100%;
+		padding: 0px 10px 0px 10px;
+		text-shadow: 1px 1px 10px rgba(1, 1, 1, 1);
+	}
 
-.main-navigation ul ul a, 
-.main-navigation ul ul ul a {
-	font-size: 0.8em;
-	line-height: 1.2em;
-}
-
-
-
-
-.main-navigation ul ul {
-	/* border: 1px solid red; */
-	display: none;
-	padding: 3px 5px 3px 5px;
-	background: rgb(31, 73, 118);
-	float: none;
-	position: absolute;
-	top: 100%;
-	left: 0;
-	z-index: 6000;
-	width: 200px;
-}
-
-.main-navigation ul ul ul {
-	display: none;
-	float: right;
-	position: absolute;
-	top: 0%;
-	right: -200px;
-	z-index: 5000;
-}
-
-.main-navigation ul li:hover > ul,
-.main-navigation ul li.focus > ul {
-	display: block;
-	left: auto;
-}
-
-.main-navigation ul ul li:hover > ul,
-.main-navigation ul ul li.focus > ul {
-	display: block;
-	left: auto;
-	margin: 3px 0px 3px 15px;
-}
-
-
-
-
-
-
-
-/*.main-navigation ul ul li {
-	animation-name: menu_appear;
-	animation-duration: 0.2s;
-	left: auto;
-}
-
-
-
-
+/* 	.main-navigation ul a:hover {
+		border-left: solid 1px rgba(255, 255, 255, 0.5);
+		border-right: solid 1px rgba(255, 255, 255, 0.5);
+	}
+*/
 
 /* Small menu. */
 .menu-toggle {
@@ -1121,12 +1076,11 @@ textarea {
 }
 
 
-	.main-navigation.toggled ul {
+.main-navigation.toggled ul {
 	display: block;
 	margin-left: auto;
 	text-align: left;
-	background-color:  #EAF0F9;
-
+	background-color: #1F4976;
 }
 
 
@@ -1175,16 +1129,19 @@ textarea {
 	padding: 3px 10px 3px 10px
 }
 
-@media screen and (min-width: 900px) {
+
+@media screen and (min-width: 768px) {
 
 	.menu-toggle {
 		display: none;
 		margin-left: auto;
 	}
-.main-navigation ul {
+	.main-navigation ul {
 		display: flex;
 	}
-	}
+
+}
+
 
 .site-main .comment-navigation,
 /*edited*/
@@ -1193,13 +1150,14 @@ textarea {
 .site-main {
 
 	display: grid;
-	grid-template-columns: auto auto auto auto 30%;
+	grid-template-columns: auto auto auto auto auto;
+	grid-template-rows: auto 1fr;
 	max-width: 1440px;
 	margin: auto;
 	margin-top: 10px;
 
-	padding-right: 3%;
-	padding-left: 3%;
+	padding-right: 2%;
+	padding-left: 2%;
 	padding-top: 10px; 
 }
 
@@ -1208,8 +1166,9 @@ textarea {
 	/* border-style: outset; */
 	border: 1px solid rgba(255, 255, 255, 0.8);
 	border-radius: 3px;
-	grid-column: 1 / 5;
-	margin-right: 20px;
+	grid-column: 2 / 6;
+	grid-row: 1 / 3;
+	margin-left: 20px;
 	margin-bottom: 20px;
 	box-shadow: 
 	2px 2px 10px rgba(125, 125, 125, 0.1);
@@ -1218,8 +1177,15 @@ textarea {
 	z-index: 999;
 }
 .site-main-sidebar {
-	grid-column: 5 / 6;
+	grid-column: 1 / 2;
+	grid-row:  2 / 3;
 	/* border: 1px solid red; */
+}
+
+.site-main-menubar {
+	grid-column: 1 / 2;
+	grid-row: 1 / 2
+
 }
 .post-navigation {
 	margin: 0 0 1.5em;
@@ -1251,21 +1217,28 @@ textarea {
 	/* border: 1px solid purple; */
 
 	display: grid;
-	grid-template-columns: auto auto auto auto;
+	grid-template-columns: auto auto auto;
+	grid-template-rows:  auto auto auto;
 	margin: auto;
 	padding-right: 5%;
 	padding-left: 5%;
 	}
 	.site-main-content {
 	/* border: 1px solid purple; */
-	grid-column: 1 / 5;
+	grid-column: 1 / 4;
+	grid-row: 2 / 3;
 	margin-right:  0px;
 	margin-bottom: 20px;
-}
-.site-main-sidebar {
-	border: 1px solid red;
-	grid-column: 1 / 5;
-}
+	}
+	.site-main-sidebar {
+		border: 1px solid red;
+		grid-column: 1 / 4;
+		grid-row: 3 / 4;
+	}
+	.site-main-menubar {
+		grid-column:  1 / 4;
+		grid-row: 1 / 2;
+	}
 }
 
 /* Posts and pages
@@ -1327,7 +1300,7 @@ textarea {
 	/* border: 1px solid red; */
 	border-radius: 3px;
 	width: 100%;
-	margin: 0px;
+	margin: 0px 0px 10px 0px;
 	padding: 5px 10px 5px 10px;
 	background: #1F4976;
 	box-shadow: 
